--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello</title>
-    <link rel="stylesheet" href="/bundle.css">
+    <link rel="stylesheet" href="/bundle.css" />
   </head>
   <body>
     <header>
       <h1>Hello, world!</h1>
     </header>
+    <main>
+      <p>Hello</p>
+    </main>
   </body>
 </html>
