--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,14 @@
     <header>
       <h1>Hello, world!</h1>
     </header>
-    <main>
-      <p>Hello</p>
+    <main> 
+      <div>
+      <p>Мой первый сайт выглядит примерно так.</p>
+      <img src="https://images.unsplash.com/photo-1695828735560-122fc856de5a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2970&q=80" alt="рассвет в горах">
+    </div>
+    <footer>
+      <h2>D Kit</h2>
+    </footer>
     </main>
   </body>
 </html>
